--- a/styles.css
+++ b/styles.css
@@ -730,7 +730,7 @@ filter: blur(.5px);}
 }
 
 .lightbox-content {
-  background: #fff;
+  background: #fafafa;
   border-radius: 24px;
   padding: 56px;
   width: 50vw;
@@ -2210,7 +2210,7 @@ html {
   
   /* Lightbox mobile adjustments */
   .lightbox-content {
-    background: #fff;
+    background: #fafafa;
     border-radius: 24px;
     padding: 24px;
     width: 80vw;
