--- a/styles.css
+++ b/styles.css
@@ -2228,8 +2228,7 @@ html {
     border-radius: 24px;
     padding: 24px;
     width: 80vw;
-    height: auto;
-    max-height: 85vh;
+    height: 75vh;
     box-shadow: 0 8px 32px rgba(0,0,0,0.18);
     display: flex;
     flex-direction: column;
