--- a/styles.css
+++ b/styles.css
@@ -295,7 +295,7 @@ width: 20vw;  }
 
  h3 {
     font-family: 'Bricolage Grotesque', sans-serif;
-    font-size: 20px;
+    font-size: 24px;
     font-weight: 700;
     margin-bottom: 8px;
     color: #555;
@@ -433,9 +433,9 @@ img.preloaded {
   flex-direction: column;
   gap: 16px;
   padding: 24px;
-  background: #f8f9fa;
-  border-radius: 16px;
-  border: 1px solid rgba(0, 0, 0, 0.08);
+  background: #fff;
+  border-radius: 24px;
+  border: .5px solid rgba(0, 0, 0, 0.08);
 }
 
 .feature-content {
@@ -445,14 +445,14 @@ img.preloaded {
 .feature-headline {
   font-family: 'Bricolage Grotesque', sans-serif;
   font-size: 24px;
-  font-weight: 600;
+  font-weight: 625;
   color: #333;
-  margin: 0 0 12px 0;
+  margin: 0 0 24px 0;
   line-height: 1.3;
 }
 
 .feature-description {
-  font-size: 18px;
+  font-size: 17px;
   line-height: 1.6;
   color: #737373;
   margin: 0;
@@ -2293,13 +2293,16 @@ html {
 }
 
 .highlight-box {
-  background: rgba(148, 123, 87, 0.05);
+  background: rgba(148, 123, 87, 0.025);
   border-left: 4px solid #947b57;
-  padding: 16px;
-  border-radius: 0 8px 8px 0;
+  border-top: .25px solid rgba(148, 123, 87, 0.25);
+  border-bottom: .25px solid rgba(148, 123, 87, 0.25);
+  border-right: .25px solid rgba(148, 123, 87, 0.25);  
+  padding: 24px;
+  border-radius: 3px 8px 8px 3px;
 }
 
-.highlight-box h3 {
+.highlight-box h4 {
   margin-top: 0;
   margin-bottom: 16px;
   color: #5b4b34;
@@ -2338,7 +2341,7 @@ html {
 }
 
 .code-block {
-  background: #f8f9fa;
+  background: #fff;
   border: 1px solid #e9ecef;
   border-radius: 8px;
   padding: 20px;
@@ -2401,7 +2404,7 @@ html {
    border-top: 1px solid #e9ecef;
    border-bottom: 1px solid #e9ecef;
  
-  border-radius: 0px 12px 12px 0px;
+  border-radius: 4px 12px 12px 4px;
   padding: 24px;
   margin: 40px 0;
   text-align: left;
