--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,6 @@ body {
 }
 
 /* Force hardware acceleration for elements that transform */
-.floating-toolbar,
 .floating-logo,
 .radio-pill,
 .toolbar-btn,
@@ -496,17 +495,19 @@ img.preloaded {
   
 .floating-toolbar.animate-toolbar {
   animation: floatIn 1.2s cubic-bezier(0.23, 1, 0.32, 1);
-  animation-fill-mode: both; /* Ensures consistent state before and after animation */
+  animation-fill-mode: both;
 }
 
 @keyframes floatIn {
   0% {
     opacity: 0;
-    transform: translateX(-50%) translateY(40px) scale(0.98);
+    top: 72px; /* 32px + 40px offset */
+    transform: translateX(-50%) scale(0.98);
   }
   100% {
     opacity: 1;
-    transform: translateX(-50%) translateY(0) scale(1);
+    top: 32px;
+    transform: translateX(-50%) scale(1);
   }
 }
 
@@ -529,11 +530,13 @@ img.preloaded {
   font-size: 14px;
   font-weight: 500;
   font-family: 'Bricolage Grotesque', sans-serif;
-  color: #6C7278;
+  color: #737373;
   border: 1px solid rgba(255, 255, 255, 0.05);
+
+  
   text-decoration: none;
   border-radius: 1.2rem;
-  padding: 8px 12px;
+  padding: 8px 10px;
   transition: background 0.2s, box-shadow 0.2s, color 0.2s;
   vertical-align: middle;
   width:auto;
@@ -1052,8 +1055,8 @@ img[src*=".gif"] {
   position: fixed;
   top: 4.6vh;
   left: 8vw;
-  width: 48px;
-  height: 48px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.85);
   backdrop-filter: blur(20px);
@@ -2290,13 +2293,13 @@ html {
 }
 
 .highlight-box {
-  background: rgba(148, 123, 87, 0.025);
+  background: rgba(148, 123, 87, 0.0025);
   border-left: 4px solid #947b57;
   border-top: .25px solid rgba(148, 123, 87, 0.25);
   border-bottom: .25px solid rgba(148, 123, 87, 0.25);
   border-right: .25px solid rgba(148, 123, 87, 0.25);  
   padding: 24px;
-  border-radius: 0px 24px 24px 0px;
+  border-radius: 4px 16px 16px 4px;
 }
 
 .highlight-box h4 {
@@ -2397,11 +2400,11 @@ html {
   
   
   border-left: 2px solid #947b57;
-  border-right: 2px solid #e9ecef;
-   border-top: 2px solid #e9ecef;
-   border-bottom: 2px solid #e9ecef;
+  border-right: 1.5px solid #e9ecef;
+   border-top: 1.5px solid #e9ecef;
+   border-bottom: 1.5px solid #e9ecef;
  
-  border-radius: 4px 24px 24px 4px;
+  border-radius: 4px 16px 16px 4px;
   padding: 24px;
   margin: 40px 0;
   text-align: left;
@@ -2449,7 +2452,7 @@ html {
 }
 
 .metric-label {
-  font-size: 10px;
+  font-size: 11px;
   color: #737373;
   text-transform: uppercase;
   letter-spacing: 0.5px;
