--- a/styles.css
+++ b/styles.css
@@ -225,7 +225,7 @@ width: 20vw;  }
     width: 100vw;
     margin-left: calc(-50vw + 50%);
     margin-right: calc(-50vw + 50%);
-    margin-top: 64px;
+    margin-top: auto;
     margin-bottom: 0;
     box-sizing: border-box;
     background-color: #fcfcfc;
