--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
   padding: 0;
   min-height: 100vh;
   font-family: 'lato', Arial, sans-serif;
-  background: #f6f6f6;
+  background: #f7f7f4;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -123,9 +123,9 @@ margin-top: calc(100vh * .25);
   box-sizing: border-box;
   text-align: center;
   text-align: left;
-  background-color: rgb(255, 255, 255);
+  background-color: #ffffff;
   padding:24px;
-  border-radius:32px;
+  border-radius:24px;
   border-style: solid;
   border-color: rgba(74, 60, 47, 0.095);
   border-width: 1px;
